--- a/news-server/package.json
+++ b/news-server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "news-server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
-  }
+    "express": "^4.17.1",
+    "tedious": "^8.3.0"
+  },
+  "keywords": [],
+  "description": ""
 }
