--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "## Inspiration While change for social good relies on action and voices from the younger generation, we often fall short due to performative activism and treating movements like fads. With ReadADay, we're striving to build a mindset of staying informed, starting discussions, and moving towards reform day by day.",
   "main": "index.js",
   "scripts": {
-    "test": "\\"
+    "test": "\\",
+    "server": "cd news-server && npm install && node index.js"
   },
   "repository": {
     "type": "git",
